Add Gradle Wrapper and update Week 2 OOP examples
- Added Gradle Wrapper files for consistent project builds using Gradle 8.11.1
- Updated Week 2 OOP materials: added `final` keywords for immutability in classes
- Replaced custom inner class `PaymentResult` with `record` in `PaymentProcessor`
- Enhanced collection utilities with `@SafeVarargs`
- Adjusted tests to align with updated class and collection changes